App bar bruges nu med dependency injection, så den kan bruges til alle skærme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PartyPlanner</string>
+    <string name="Kommende_Events">kommende events</string>
 </resources>
