Nu kommende begivenheder lidt bedre, Der mangler dog et sted til profil lige nu men det er en af de næste ting der skal laves. Den er ikke særlig pæn lige nu så noget skal gøres

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">PartyPlanner</string>
-    <string name="Kommende_Events">kommende events</string>
+    <string name="Kommende_Begivenheder">Kommende_begivenheder</string>
 </resources>
