--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">PartyPlanner</string>
+    <string name="app_name">s213456 Lykkehjulet</string>
     <string name="Kommende_Begivenheder">Kommende begivenheder</string>
 </resources>
