Big Push just to make the app navigateAble there is no real functionality or changes to the screens at all only a really ugly button in OPret bruger screen. For testing purposes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">s213456 Lykkehjulet</string>
     <string name="Kommende_Begivenheder">Kommende begivenheder</string>
+    <string name="Create_event">Lav nyt event</string>
+
 </resources>
