Beggining to update viewmodel so when you create a wishlist it gets updated to firebase i have also integrated the help screen into the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="Dine_ønskeLister">Dine ønskelister</string>
     <string name="Ny_Begivenhed">Ny begivenhed</string>
     <string name="Edit_Event">Rediger din begivenhed</string>
+    <string name="Opret_ønskeliste">Ny ønskeliste</string>
+    <string name="Help_Screen">Hjælp</string>
+
+
 
 
 
