Help screen now with viewmodel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="Opret_ønskeliste">Ny ønskeliste</string>
     <string name="Help_Screen">Hjælp</string>
 
+    /Here are the text fields for the help screen
+
 
 
 
