updated spelling errors and translated from english to danish.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="Dit_Event">Dit Event</string>
     <string name="Dine_wisList">Dine Ønskelister</string>
     <string name="Din_profil">Din Profil</string>
-    <string name="Coming_events">Go to coming events</string>
-    <string name="Event_Picture">Picture from coming event</string>
-    <string name="Profile_Description">Profil Beskrivelse</string>
+    <string name="Coming_events">Gå til kommende begivenheder</string>
+    <string name="Event_Picture">Billede fra kommende begivenheder</string>
+    <string name="Profile_Description">Profilbeskrivelse</string>
     <string name="Profile_Picture">Profil Billede</string>
 
 
