fixes for string resources of names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">PartyPlanner01</string>
     <string name="Kommende_Begivenheder">Kommende begivenheder</string>
     <string name="Create_event">Lav nyt event</string>
-    <string name="Dit_Event">Dit Event</string>
+    <string name="Dit_Event">Din begivenhed</string>
     <string name="Dine_wisList">Dine Ønskelister</string>
     <string name="Din_profil">Din Profil</string>
     <string name="Coming_events">Gå til kommende begivenheder</string>
