--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PartyPlanner01</string>
     <string name="Kommende_Begivenheder">Kommende begivenheder</string>
-    <string name="Create_event">Lav nyt event</string>
+    <string name="Create_event">Lav ny begivenhed</string>
     <string name="Dit_Event">Din begivenhed</string>
     <string name="Dine_wisList">Dine Ønskelister</string>
     <string name="Din_profil">Din Profil</string>
